# Snake

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
src/: constants.py  direction.py  element.py  food.py  game.py  infrastructure.py  level.py  main.py  menu.py  snake.py  utils.py
tests/: test_direction.py  test_element.py  test_food.py  test_level.py  test_snake.py  test_utils.py
